--- a/DotNetPatterns.Exec/DotNetPatterns.Exec.csproj
+++ b/DotNetPatterns.Exec/DotNetPatterns.Exec.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Behavioral\Strategy\Strategy.csproj" />
+    <ProjectReference Include="..\Behavioral\TemplateMethod\TemplateMethod.csproj" />
   </ItemGroup>
 
 </Project>
