--- a/DotNetPatterns.Tests/DotNetPatterns.Tests.csproj
+++ b/DotNetPatterns.Tests/DotNetPatterns.Tests.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Behavioral\Strategy\Strategy.csproj" />
+    <ProjectReference Include="..\Behavioral\TemplateMethod\TemplateMethod.csproj" />
   </ItemGroup>
 
 </Project>
